2017-09-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* README.md:

	Added a short paragraph on the typhon configuration file.

	* typhon/__init__.py: Import ``typhon.config``.

	* typhon/environment.py:

	Added a reference to the ``typhon.config`` module to the
	docstring.

2017-09-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/common.py (run_arts):

	Make use of the new `typhon.environment` mechanism. The
	dARTS_BUILD_PATH, ARTS_INCLUDE_PATH and ARTS_DATA_PATH should now
	be considered properly.

	* typhon/arts/workspace/api.py:

	Quick fix of inconsistent handling of environment variables.

2017-09-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/environment.py: Handle environment variables.

	Combine the classical CLI environment variable approach and
	the settings in the typhon configuration file.

	**Environment variables precede settings in the config file.**

	* doc/conf.py, doc/typhon.environment.rst:

	Added `typhon.environment` to documentation.

	* doc/modules.rst,
	  typhon/arts/workspace/__init__.py,
	  typhon/arts/workspace/api.py:

	Make use of constant variables  in `typhon.environment`
	instead of checking the environment.

2017-09-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/config.py (_Configurator):

	Cleaned the object implementation.

	* (_Configurator.__call__, get_config):

	Added a keyword argument to specify config section.

2017-09-04  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	Some smaller fixes for interactive python interface.

	* typhon/arts/workspace/agendas.py:
	- Decode error byte string returned by execute_controlfile to properly display
	ARTS error messages.

	* typhon/arts/workspace/methods.py:
	- Raise value error when group of generic input doesn't match the expected one.

	* typhon/arts/workspace/variables.py:
	- Update array interface when calling value on a WSV

2017-09-04  Lukas Kluft  <lukas.kluft@gmail.com>

	Added a function to plot a colorized series of bars.
